--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/craga89/react-baobab-boilerplate",
   "dependencies": {
+    "autoprefixer-loader": "^1.2.0",
     "babel": "^4.7.7",
     "babel-core": "^4.7.7",
     "babel-eslint": "^2.0.0",
@@ -32,8 +33,10 @@
     "json-loader": "^0.5.1",
     "jsx-loader": "^0.12.2",
     "koa": "^0.18.1",
+    "koa-mount": "^1.3.0",
     "koa-proxy": "^0.2.0",
     "koa-router": "^4.2.0",
+    "koa-static": "^1.4.9",
     "less": "^2.4.0",
     "less-loader": "^2.1.0",
     "node-jsx": "^0.12.4",
@@ -44,6 +47,7 @@
     "url-loader": "^0.5.5",
     "webpack": "^1.6.0",
     "webpack-dev-server": "^1.7.0",
+    "winston": "^0.9.0",
     "yargs": "^3.5.3"
   }
 }
