--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "socket.io": "^1.3.5",
     "style-loader": "^0.8.3",
     "url-loader": "^0.5.5",
+    "usage": "^0.6.0",
     "webpack": "^1.6.0",
     "webpack-dev-server": "^1.7.0",
     "winston": "^0.9.0",
