--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   "homepage": "https://github.com/craga89/react-baobab-boilerplate",
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel": "^4.7.7",
-    "babel-core": "^4.7.7",
-    "babel-eslint": "^2.0.0",
-    "babel-loader": "^4.1.0",
-    "babel-runtime": "^4.7.7",
-    "baobab": "^0.3.2",
+    "babel": "^4.7.13",
+    "babel-eslint": "^2.0.2",
+    "babel-loader": "^4.2.0",
+    "babel-runtime": "^4.7.13",
+    "baobab": "^0.4.1",
+    "core-js": "^0.7.2",
     "css-loader": "^0.9.1",
-    "eslint": "^0.11.0",
+    "d3": "^3.5.5",
+    "eslint": "^0.17.0",
     "file-loader": "^0.8.1",
     "jshint": "^2.6.3",
     "json-loader": "^0.5.1",
@@ -41,14 +42,15 @@
     "less-loader": "^2.1.0",
     "node-jsx": "^0.12.4",
     "react": "^0.12.2",
-    "react-hot-loader": "^1.2.1",
+    "react-d3-components": "file:../react-d3-components",
+    "react-hot-loader": "^1.2.3",
     "socket.io": "^1.3.5",
     "style-loader": "^0.8.3",
     "url-loader": "^0.5.5",
     "usage": "^0.6.0",
-    "webpack": "^1.6.0",
+    "webpack": "^1.7.3",
     "webpack-dev-server": "^1.7.0",
     "winston": "^0.9.0",
-    "yargs": "^3.5.3"
+    "yargs": "^3.5.4"
   }
 }
